Fund holding stats page created. Navbar style fix
