# ark-second-backend-api-tsql/api/swagger/swagger.yaml
@@ -29,7 +29,7 @@ paths:
         - Bearer: []
       responses:
         '200':
-          description: Data is retrieved successfully.=
+          description: Data is retrieved successfully.
           schema:
             type: array
             items:
@@ -39,6 +39,48 @@ paths:
                   type: string
                 description:
                   type: string
+        '500':
+          description: Couldn't retrieve data from database.
+  
+  /api/db/funds/recent:
+    get:
+      summary: Gets most recent data on all tickers for a given fund.
+      security:
+        - Basic: []
+        - Bearer: []
+      parameters:
+        - name: fundType
+          in: query
+          required: true
+          type: string
+      responses:
+        '200':
+          description: Data is retrieved successfully.
+          schema:
+            type: array
+            items:
+              type: object
+              properties:
+                fundName:
+                  type: string
+                description:
+                  type: string
+                companyId:
+                  type: integer
+                companyName:
+                  type: string
+                ticker:
+                  type: string
+                cusip:
+                  type: string
+                date:
+                  type: string
+                sharesDifference:
+                  type: number
+                marketValueDifference:
+                  type: number
+        '422':
+          description: Parameters are of an invalid format.
         '500':
           description: Couldn't retrieve data from database.
           
